@@ -48,6 +48,8 @@ Other Changes:
   of this flag and wasting memory.
   Undetected since July 2015 and now spotted by @TellowKrinkle, this is perhaps
   the oldest bug in Dear ImGui history (albeit for a rarely used feature)! (#9086)
+- Textures:
+  - Fixed a building issue when ImTextureID is defined as a struct.
 - Scrollbar: fixed a codepath leading to a divide-by-zero (which would not be
   noticeable by user but detected by sanitizers). (#9089) [@judicaelclair]
 - Backends:
